--- a/src/index.css
+++ b/src/index.css
@@ -7,13 +7,13 @@ input[type="number"] {
   width: 100%;
   text-align: center;
   font-size: 1.1rem;
-
 }
 
 input[type="radio"] {
   @apply border border-gray-300 rounded-md;
   text-align: center;
   width: 30px;
+  margin-top: 0.7rem;
 }
 
 .simulate {
